# services/payment/src/api/web/charge.rs
@@ -6,11 +6,11 @@ use actix_web::error::{Error as ActixError, ResponseError};
 use actix_web::http::header::{ContentType, TryIntoHeaderValue, CONTENT_TYPE};
 use actix_web::http::StatusCode;
 use actix_web::web::{Data as WebData, Json as ExtJson, Path as ExtPath};
-use actix_web::{HttpResponse, Result as ActixResult};
+use actix_web::{HttpResponse, HttpResponseBuilder, Result as ActixResult};
 
 use ecommerce_common::logging::{app_log_event, AppLogContext, AppLogLevel};
 
-use super::dto::ChargeReqDto;
+use super::dto::{CapturePay3partyRespDto, CapturePayReqDto, CapturePayRespDto, ChargeReqDto};
 use crate::adapter::datastore::AppDataStoreContext;
 use crate::adapter::repository::{app_repo_charge, AbstractChargeRepo};
 use crate::usecase::{
@@ -170,6 +170,31 @@ pub(super) async fn refresh_charge_status(
         let ctype = ContentType::json().try_into_value().unwrap();
         r.headers_mut().insert(CONTENT_TYPE, ctype);
         r.set_body(BoxBody::new(body))
+    };
+    Ok(resp)
+}
+
+pub(super) async fn capture_authorized_charge(
+    path_segms: ExtPath<(String,)>,
+    req_body: ExtJson<CapturePayReqDto>,
+    _authed_claim: AppAuthedClaim,
+    shr_state: WebData<AppSharedState>,
+) -> ActixResult<HttpResponse> {
+    let charge_id = path_segms.into_inner().0;
+    let store_id = req_body.store_id;
+    let logctx = shr_state.log_context();
+    app_log_event!(logctx, AppLogLevel::DEBUG, "{charge_id}, {store_id}");
+    let usecase_result = CapturePayRespDto {
+        store_id,
+        processor: CapturePay3partyRespDto::Stripe,
+    };
+    let body_raw = serde_json::to_vec(&usecase_result).unwrap();
+    let http_status = StatusCode::OK;
+    let resp = {
+        let mut r = HttpResponseBuilder::new(http_status);
+        let header = (CONTENT_TYPE, ContentType::json());
+        r.append_header(header);
+        r.body(body_raw)
     };
     Ok(resp)
 }
